--- a/blogs.html
+++ b/blogs.html
@@ -31,123 +31,100 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <div class="container">
-      <div class="navbar-brand">
-        <a href="index.html">
-          <img src="images/imgi_1_logo.png" alt="" class="" />
-        </a>
-      </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
+        <div class="container">
+            <div class="navbar-brand">
+                <a href="index.html">
+                    <img src="images/imgi_1_logo.png" alt="" class="">
+                </a>
+            </div>
 
-          <!-- Services Dropdown -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-medium" href="#" id="servicesDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Services
-            </a>
-            <ul class="dropdown-menu fade-down shadow" aria-labelledby="servicesDropdown">
-              <li>
-                <a class="dropdown-item" href="blastocyst.html">Blastocyst</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="ivf-treatment.html">IVF Treatment</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="donor-program.html">Donor Program</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="endometriosis.html">Endometriosis</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="uterine-bleeding.html">Uterine Bleeding</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="high-risk-pregnancy.html">High Risk Pregnancy</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="heterotopic-pregnancy.html">Heterotopic Pregnancy</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="icsi.html">ICSI Treatment</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="infertility.html">Infertility</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="mymectomy.html">Myomectomy</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="pregnancy-in-diabetes-mellitus.html">Pregnancy In Diabetes Mellitus</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="pregnancy-in-hypertension.html">Pregnancy In Hypertension</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="pregnancy-in-twins.html">Pregnancy In Multiple Twins</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="pregnancy-in-rh-incompatibility.html">Pregnancy In RH Incompatibility</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="pregnancy-in-obesity.html">Pregnancy In Obesity</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy Loss</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="tubal-cannulation.html">Tubal cannulation</a>
-              </li>
-            </ul>
-          </li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-          <!-- Gallery Dropdown -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-medium" href="#" id="galleryDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Gallery
-            </a>
-            <ul class="dropdown-menu fade-down shadow" aria-labelledby="galleryDropdown">
-              <li>
-                <a class="dropdown-item" href="photo-gallery.html">Photo Gallery</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="video-gallery.html">Video Gallery</a>
-              </li>
-            </ul>
-          </li>
+            <div class="collapse navbar-collapse" id="navbarNav">
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-medium" href="#" id="eventDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Events
-            </a>
-            <ul class="dropdown-menu fade-down shadow" aria-labelledby="eventDropdown">
-              <li><a class="dropdown-item" href="events.html">Event</a></li>
-              <li><a class="dropdown-item" href="news.html">News</a></li>
-            </ul>
-          </li>
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="blogs.html">Blogs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <a href="" class="btn btn-gradient">Book Appointment</a>
-    </div>
-  </nav>
+                    <!-- Services Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-medium" href="#" id="servicesDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Services
+                        </a>
+                        <ul class="dropdown-menu fade-down shadow" aria-labelledby="servicesDropdown">
+                            <li><a class="dropdown-item" href="blastocyst.html">Blastocyst</a></li>
+                            <li><a class="dropdown-item" href="ivf-treatment.html">IVF Treatment</a></li>
+                            <li><a class="dropdown-item" href="donor-program.html">Donor Program</a></li>
+                            <li><a class="dropdown-item" href="endometriosis.html">Endometriosis</a></li>
+                            <li><a class="dropdown-item" href="uterine-bleeding.html">Uterine Bleeding</a></li>
+                            <li><a class="dropdown-item" href="high-risk-pregnancy.html">High Risk Pregnancy</a></li>
+                            <li><a class="dropdown-item" href="heterotopic-pregnancy.html">Heterotopic Pregnancy</a>
+                            </li>
+                            <li><a class="dropdown-item" href="icsi.html">ICSI Treatment</a></li>
+                            <li><a class="dropdown-item" href="infertility.html">Infertility</a></li>
+                            <li><a class="dropdown-item" href="mymectomy.html">Myomectomy</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-diabetes-mellitus.html">Pregnancy In
+                                    Diabetes Mellitus</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-hypertension.html">Pregnancy In
+                                    Hypertension</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-twins.html">Pregnancy In Multiple Twins</a>
+                            </li>
+                            <li><a class="dropdown-item" href="pregnancy-in-rh-incompatibility.html">Pregnancy In RH
+                                    Incompatibility</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-obesity.html">Pregnancy In Obesity</a></li>
+                            <li><a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy
+                                    Loss</a></li>
+                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal Cannulation</a></li>
+                        </ul>
+                    </li>
+
+                    <!-- Gallery Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-medium" href="#" id="galleryDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Gallery
+                        </a>
+                        <ul class="dropdown-menu fade-down shadow" aria-labelledby="galleryDropdown">
+                            <li><a class="dropdown-item" href="photo-gallery.html">Photo Gallery</a></li>
+                            <li><a class="dropdown-item" href="video-gallery.html">Video Gallery</a></li>
+                        </ul>
+                    </li>
+
+                    <!-- Events Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-medium" href="#" id="eventDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Events
+                        </a>
+                        <ul class="dropdown-menu fade-down shadow" aria-labelledby="eventDropdown">
+                            <li><a class="dropdown-item" href="events.html">Event</a></li>
+                            <li><a class="dropdown-item" href="news.html">News</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+
+                <!-- Book Appointment Visible Only on Mobile/Tablet -->
+                <ul class="navbar-nav d-lg-none">
+                    <li class="nav-item">
+                        <a href="contact.html" class="btn btn-gradient w-100 mt-3">Book Appointment</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <!-- Book Appointment Visible Only on Desktop -->
+            <div class="d-none d-lg-block">
+                <a href="contact.html" class="btn btn-gradient">Book Appointment</a>
+            </div>
+
+        </div>
+    </nav>
 
   <!-- Hero Section -->
   <header class="about-hero pb-5" style="padding-top: 150px">
@@ -233,10 +210,8 @@
       </div>
 
       <div class="footer-bottom">
-        <p>
-          &copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed with
-          <i class="bi bi-heart-fill" style="color: var(--primary-pink)"></i>
-        </p>
+        <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed & Developed by <a
+            style="text-decoration: none; color: #bbb;" href="https://brandingwaale.com/"> Brandingwaale Webtech</a></p>
       </div>
     </div>
   </footer>
@@ -503,6 +478,7 @@
       observer.observe(card);
     });
   </script>
+
 </body>
 
 </html>
