--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet"
@@ -40,14 +42,16 @@
                     <img src="images/imgi_1_logo.png" alt="" class="">
                 </a>
             </div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-
 
                     <!-- Services Dropdown -->
                     <li class="nav-item dropdown">
@@ -78,10 +82,9 @@
                             <li><a class="dropdown-item" href="pregnancy-in-obesity.html">Pregnancy In Obesity</a></li>
                             <li><a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy
                                     Loss</a></li>
-                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal cannulation</a></li>
+                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal Cannulation</a></li>
                         </ul>
                     </li>
-
 
                     <!-- Gallery Dropdown -->
                     <li class="nav-item dropdown">
@@ -95,6 +98,7 @@
                         </ul>
                     </li>
 
+                    <!-- Events Dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle fw-medium" href="#" id="eventDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -106,20 +110,33 @@
                         </ul>
                     </li>
 
-
                     <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
+
+                <!-- Book Appointment Visible Only on Mobile/Tablet -->
+                <ul class="navbar-nav d-lg-none">
+                    <li class="nav-item">
+                        <a href="contact.html" class="btn btn-gradient w-100 mt-3">Book Appointment</a>
+                    </li>
+                </ul>
+
             </div>
-            <a href="contact.html" class="btn btn-gradient">Book Appointment</a>
+
+            <!-- Book Appointment Visible Only on Desktop -->
+            <div class="d-none d-lg-block">
+                <a href="contact.html" class="btn btn-gradient">Book Appointment</a>
+            </div>
+
         </div>
     </nav>
+
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 hero-content">
+                <div class="col-lg-6 hero-content order-2 order-md-2 order-lg-1">
                     <h1 class="hero-title" data-aos="fade-right" data-aos-delay="100">Granting Women the Care They
                         Deserve</h1>
                     <p class="hero-subtitle" data-aos="fade-right" data-aos-delay="200">Best Gynaecology / IVF Doctor in
@@ -134,9 +151,10 @@
                             data-aos-delay="200">Book Appointment</a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 order-1 order-md-1 order-lg-2">
                     <div class="hero-image" data-aos="fade-left">
-                        <img src="images/imgi_3_dr.divya-profile.webp" alt="Dr. Divya Kumar" class="img-fluid">
+                        <img src="images/imgi_3_dr.divya-profile.webp" alt="Dr. Divya Kumar"
+                            class="img-fluid mb-4 mb-lg-0">
                     </div>
                 </div>
             </div>
@@ -192,6 +210,7 @@
         </div>
     </section> -->
 
+
     <section id="about" class="about-section">
         <div class="container">
             <h2 class="section-title pb-5" data-aos="fade-up">About Dr. Divya Kumar</h2>
@@ -205,7 +224,15 @@
                     <div class="about-content">
 
                         <h3>Best Gynaecologist, Infertility & IVF Specialist in Faridabad</h3>
-                        <p><strong>Dr. Divya</strong> is an esteemed gynecologist, obstetrician, and infertility specialist with more than 15 years of dedicated professional practice. Her expertise extends to a broad spectrum of women's health, and she is renowned for her exceptional care in the areas of high-risk pregnancy treatment, recurrent miscarriage management, advanced gynecological endoscopic surgeries, and infertility treatments, including in vitro fertilization (IVF). As a female surgeon in Faridabad, her unwavering commitment to women's health has solidified her reputation as a respected figure in her field. If you're searching for a gynecologist in Faridabad, Dr. Divya is the trusted expert you can turn to for comprehensive care.</p>
+                        <p><strong>Dr. Divya</strong> is an esteemed gynecologist, obstetrician, and infertility
+                            specialist with more than 15 years of dedicated professional practice. Her expertise extends
+                            to a broad spectrum of women's health, and she is renowned for her exceptional care in the
+                            areas of high-risk pregnancy treatment, recurrent miscarriage management, advanced
+                            gynecological endoscopic surgeries, and infertility treatments, including in vitro
+                            fertilization (IVF). As a female surgeon in Faridabad, her unwavering commitment to women's
+                            health has solidified her reputation as a respected figure in her field. If you're searching
+                            for a gynecologist in Faridabad, Dr. Divya is the trusted expert you can turn to for
+                            comprehensive care.</p>
 
                         <div class="row mt-4">
                             <div class="col-md-4">
@@ -320,7 +347,7 @@
     </section>
 
     <section>
-        <div class="container-main">
+        <div class="container">
             <!-- Title Section -->
             <div class="plans-title">
                 <h1 data-aos="fade-up">Plan <span style="color: var(--primary-purple);">Table</span></h1>
@@ -486,7 +513,7 @@
     </section>
 
     <section class="treatment-section">
-        <div class="container-custom">
+        <div class="container">
             <!-- Header Section -->
             <div class="header-section">
                 <h2 data-aos="fade-up">Welcome To Our Dedicated Pregnancy <span
@@ -498,7 +525,7 @@
             <!-- treatment Grid -->
             <div class="treatment-grid">
                 <!-- treatment 1 -->
-                <div class="treatment-card" data-aos="fade-up" data-aos-delay="100">
+                <div class="treatment-card" data-aos="fade-up">
                     <div class="treatment-image">
                         <img src="images/imgi_33_a2.webp" alt="Laparoscopic Hysterectomy">
                     </div>
@@ -511,7 +538,7 @@
                 </div>
 
                 <!-- treatment 2 -->
-                <div class="treatment-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="treatment-card" data-aos="fade-up">
                     <div class="treatment-image">
                         <img src="images/imgi_35_a4.webp" alt="Laparoscopic Ovarian Cystectomy">
                     </div>
@@ -524,7 +551,7 @@
                 </div>
 
                 <!-- treatment 3 -->
-                <div class="treatment-card" data-aos="fade-up" data-aos-delay="300">
+                <div class="treatment-card" data-aos="fade-up">
                     <div class="treatment-image">
                         <img src="images/imgi_32_a1.webp" alt="Normal C-Section">
                     </div>
@@ -554,7 +581,7 @@
 
     <section>
         <div class="container">
-            <div class="head">
+            <div class="head" data-aos="fade-up">
                 <h2>Trimester <span style="color: var(--primary-purple);">Chart</span></h2>
                 <!-- <div class="underline"></div> -->
             </div>
@@ -562,7 +589,7 @@
             <div class="cards-wrapper">
                 <div class="cards-container" id="cardsContainer">
                     <!-- Card 1 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-seedling"></i></div> -->
@@ -587,7 +614,7 @@
                     </div>
 
                     <!-- Card 2 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-leaf"></i></div> -->
@@ -612,7 +639,7 @@
                     </div>
 
                     <!-- Card 3 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-spa"></i></div> -->
@@ -637,7 +664,7 @@
                     </div>
 
                     <!-- Card 4 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-pepper-hot"></i></div> -->
@@ -662,7 +689,7 @@
                     </div>
 
                     <!-- Card 5 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-carrot"></i></div> -->
@@ -687,7 +714,7 @@
                     </div>
 
                     <!-- Card 6 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="600">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class=""></i></div> -->
@@ -712,7 +739,7 @@
                     </div>
 
                     <!-- Card 7 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="700">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-apple-alt"></i></div> -->
@@ -737,7 +764,7 @@
                     </div>
 
                     <!-- Card 8 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="800">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-salad"></i></div> -->
@@ -762,7 +789,7 @@
                     </div>
 
                     <!-- Card 9 -->
-                    <div class="pregnancy-card">
+                    <div class="pregnancy-card" data-aos="fade-up" data-aos-delay="900">
                         <div class="card-header-custom">
                             <div class="week-title">
                                 <!-- <div class="week-icon"><i class="fas fa-baby"></i></div> -->
@@ -809,7 +836,7 @@
 
             <div class="row">
                 <!-- Left side - Video list -->
-                <div class="col-lg-4" data-aos="fade-right">
+                <div class="col-lg-4 order-2 order-md-2 order-lg-1" data-aos="fade-right">
                     <div class="video-playlist">
                         <div class="playlist-item active" data-video="u4N19j_db9k"
                             data-title="What Is a Normal Or Abnormal Period? | Dr. Divya Kumar" data-views="125K"
@@ -889,7 +916,7 @@
                 </div>
 
                 <!-- Right side - Main video player -->
-                <div class="col-lg-8" data-aos="fade-left">
+                <div class="col-lg-8 order-1 order-md-1 order-lg-2 mb-3 mb-lg-0" data-aos="fade-left">
                     <div class="main-video-player">
                         <div class="video-player-wrapper">
                             <iframe id="mainVideoPlayer" src="https://youtube.com/embed/u4N19j_db9k?si=yiBHkRhWnFc4XQFj"
@@ -1118,7 +1145,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <!-- Left Content -->
-                <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
+                <div class="col-lg-6 order-2 order-md-2 order-lg-1" data-aos="fade-right">
                     <div class="events-content">
                         <h2 class="section-title text-start">Our <span
                                 style="color: var(--primary-purple);">Events</span></h2>
@@ -1139,14 +1166,14 @@
                             educating people about various aspects of healthcare. Her dedication to the health and
                             well-being of her community is truly commendable.
                         </p>
-                        <a href="">
+                        <a href="events.html">
                             <button class="btn btn-gradient mt-3">View All Events</button>
                         </a>
                     </div>
                 </div>
 
                 <!-- Right Event Gallery -->
-                <div class="col-lg-6" data-aos="fade-left">
+                <div class="col-lg-6 order-1 order-md-1 order-lg-2 mb-5 mb-lg-0" data-aos="fade-left">
                     <div class="event-gallery-wrapper">
                         <div class="event-gallery-container">
                             <!-- Event Slide 1 -->
@@ -1328,13 +1355,13 @@
             <h2>Take a Second Opinion From Our IVF Specialist</h2>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
                 <button class="btn btn-white">
-                    <i class="bi bi-telephone me-2"></i>Call Now: +91 98765 43210
+                    <i class="bi bi-calendar-check me-2"></i>Book Online
                 </button>
                 <button class="btn btn-white">
                     <i class="bi bi-whatsapp me-2"></i>WhatsApp
                 </button>
                 <button class="btn btn-white">
-                    <i class="bi bi-calendar-check me-2"></i>Book Online
+                    <i class="bi bi-telephone me-2"></i>Call Now: +91 98765 43210
                 </button>
             </div>
         </div>
@@ -1390,8 +1417,9 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed with <i class="bi bi-heart-fill"
-                        style="color: var(--primary-pink);"></i></p>
+                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed & Developed by <a
+                        style="text-decoration: none; color: #bbb;" href="https://brandingwaale.com/"> Brandingwaale
+                        Webtech</a></p>
             </div>
         </div>
     </footer>
