--- a/services.html
+++ b/services.html
@@ -8,7 +8,8 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
 
 
     <!-- Bootstrap Icons -->
@@ -41,14 +42,16 @@
                     <img src="images/imgi_1_logo.png" alt="" class="">
                 </a>
             </div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-
 
                     <!-- Services Dropdown -->
                     <li class="nav-item dropdown">
@@ -79,10 +82,9 @@
                             <li><a class="dropdown-item" href="pregnancy-in-obesity.html">Pregnancy In Obesity</a></li>
                             <li><a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy
                                     Loss</a></li>
-                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal cannulation</a></li>
+                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal Cannulation</a></li>
                         </ul>
                     </li>
-
 
                     <!-- Gallery Dropdown -->
                     <li class="nav-item dropdown">
@@ -96,6 +98,7 @@
                         </ul>
                     </li>
 
+                    <!-- Events Dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle fw-medium" href="#" id="eventDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -107,12 +110,24 @@
                         </ul>
                     </li>
 
-
                     <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
+
+                <!-- Book Appointment Visible Only on Mobile/Tablet -->
+                <ul class="navbar-nav d-lg-none">
+                    <li class="nav-item">
+                        <a href="contact.html" class="btn btn-gradient w-100 mt-3">Book Appointment</a>
+                    </li>
+                </ul>
+
             </div>
-            <a href="" class="btn btn-gradient">Book Appointment</a>
+
+            <!-- Book Appointment Visible Only on Desktop -->
+            <div class="d-none d-lg-block">
+                <a href="contact.html" class="btn btn-gradient">Book Appointment</a>
+            </div>
+
         </div>
     </nav>
 
@@ -215,7 +230,8 @@
                             <i class="bi-exclamation-circle"></i>
                         </div>
                         <h4>Heterotopic Pregnancy</h4>
-                        <p>It's important to reach out to medical professionals who are experienced in Ectopic Pregnancy Surgery near me for appropriate guidance and support.</p>
+                        <p>It's important to reach out to medical professionals who are experienced in Ectopic Pregnancy
+                            Surgery near me for appropriate guidance and support.</p>
                     </div>
                 </div>
 
@@ -225,7 +241,10 @@
                             <i class="bi-egg-fill"></i>
                         </div>
                         <h4>ICSI Treatment</h4>
-                        <p>ICSI Treatment Centres in Faridabad are dedicated to helping couples fulfill their dreams of parenthood. This innovative technique not only addresses male infertility but also opens doors to possibilities like egg donation for couples who require additional support in their fertility journey.</p>
+                        <p>ICSI Treatment Centres in Faridabad are dedicated to helping couples fulfill their dreams of
+                            parenthood. This innovative technique not only addresses male infertility but also opens
+                            doors to possibilities like egg donation for couples who require additional support in their
+                            fertility journey.</p>
                     </div>
                 </div>
 
@@ -235,7 +254,9 @@
                             <i class="bi bi-flower1"></i>
                         </div>
                         <h4>Infertility</h4>
-                        <p>There are reputable facilities like the Fertility Clinic in Faridabad and the Fertility Hospital in Faridabad that offer female infertility treatment to support individuals and couples on their journey to parenthood.</p>
+                        <p>There are reputable facilities like the Fertility Clinic in Faridabad and the Fertility
+                            Hospital in Faridabad that offer female infertility treatment to support individuals and
+                            couples on their journey to parenthood.</p>
                     </div>
                 </div>
 
@@ -245,7 +266,10 @@
                             <i class="bi-scissors"></i>
                         </div>
                         <h4>Myomectomy</h4>
-                        <p>With our expertise in Laparoscopic Myomectomy Treatment in Faridabad, we offer an effective solution for fibroid removal surgery. Don't let fibroids hold you back any longer – take the first step towards a more comfortable, fibroid-free future with our specialized laparoscopic fibroid removal procedures.</p>
+                        <p>With our expertise in Laparoscopic Myomectomy Treatment in Faridabad, we offer an effective
+                            solution for fibroid removal surgery. Don't let fibroids hold you back any longer – take the
+                            first step towards a more comfortable, fibroid-free future with our specialized laparoscopic
+                            fibroid removal procedures.</p>
                     </div>
                 </div>
 
@@ -255,7 +279,9 @@
                             <i class="bi-droplet-half"></i>
                         </div>
                         <h4>Pregnancy In Diabetes Mellitus</h4>
-                        <p>It's important to emphasize that even when blood glucose levels are maintained nearly within the normal range, gestational diabetes can still result in fetal macrosomia, which underscores the importance of proper management and treatment.</p>
+                        <p>It's important to emphasize that even when blood glucose levels are maintained nearly within
+                            the normal range, gestational diabetes can still result in fetal macrosomia, which
+                            underscores the importance of proper management and treatment.</p>
                     </div>
                 </div>
 
@@ -265,7 +291,9 @@
                             <i class="bi-heart-pulse"></i>
                         </div>
                         <h4>Pregnancy In Hypertension</h4>
-                        <p>In Faridabad, having access to experienced doctors who specialize in pregnancy hypertension is crucial. Early detection, appropriate treatment, and careful management are the keys to ensuring a healthy pregnancy for both the mother and the developing fetus.</p>
+                        <p>In Faridabad, having access to experienced doctors who specialize in pregnancy hypertension
+                            is crucial. Early detection, appropriate treatment, and careful management are the keys to
+                            ensuring a healthy pregnancy for both the mother and the developing fetus.</p>
                     </div>
                 </div>
 
@@ -275,7 +303,11 @@
                             <i class="bi-people-fill"></i>
                         </div>
                         <h4>Pregnancy In Multiple Twins</h4>
-                        <p>It's worth noting that multiple pregnancies can extend beyond twins, including triplets and other higher-order multiples. These additional pregnancies can also be identical, fraternal, or a combination of both. If you find yourself in this situation, consider consulting a specialized Twin Pregnancy Clinic for comprehensive and personalized multiple pregnancy treatment in faridabad.</p>
+                        <p>It's worth noting that multiple pregnancies can extend beyond twins, including triplets and
+                            other higher-order multiples. These additional pregnancies can also be identical, fraternal,
+                            or a combination of both. If you find yourself in this situation, consider consulting a
+                            specialized Twin Pregnancy Clinic for comprehensive and personalized multiple pregnancy
+                            treatment in faridabad.</p>
                     </div>
                 </div>
 
@@ -285,7 +317,9 @@
                             <i class="bi-arrow-left-right"></i>
                         </div>
                         <h4>Pregnancy In RH Compatibility</h4>
-                        <p>If you are looking for Rh incompatibility treatment in Faridabad, it's essential to consult with a healthcare provider to discuss the specific treatment options and associated costs.</p>
+                        <p>If you are looking for Rh incompatibility treatment in Faridabad, it's essential to consult
+                            with a healthcare provider to discuss the specific treatment options and associated costs.
+                        </p>
                     </div>
                 </div>
 
@@ -295,7 +329,9 @@
                             <i class="bi bi-person-standing-dress"></i>
                         </div>
                         <h4>Pregnancy In Obesity</h4>
-                        <p>Obesity Treatment Doctors In Faridabad are well-versed in managing the health of expectant mothers. We offer specialized Obesity Treatment in Faridabad, ensuring that both you and your baby receive the best care.</p>
+                        <p>Obesity Treatment Doctors In Faridabad are well-versed in managing the health of expectant
+                            mothers. We offer specialized Obesity Treatment in Faridabad, ensuring that both you and
+                            your baby receive the best care.</p>
                     </div>
                 </div>
 
@@ -305,7 +341,11 @@
                             <i class="bi bi-x-circle"></i>
                         </div>
                         <h4>Recurrent Pregnancy Loss</h4>
-                        <p>Our approach to Recurrent Pregnancy Loss Treatment in Faridabad is proactive and empathetic. We believe in early intervention, allowing us to start investigating the underlying causes and tailoring a personalized treatment plan after just the second miscarriage. Our goal is to provide you with the best possible care and support, ensuring a higher chance of a successful pregnancy in the future.</p>
+                        <p>Our approach to Recurrent Pregnancy Loss Treatment in Faridabad is proactive and empathetic.
+                            We believe in early intervention, allowing us to start investigating the underlying causes
+                            and tailoring a personalized treatment plan after just the second miscarriage. Our goal is
+                            to provide you with the best possible care and support, ensuring a higher chance of a
+                            successful pregnancy in the future.</p>
                     </div>
                 </div>
 
@@ -315,7 +355,9 @@
                             <i class="bi bi-eyedropper"></i>
                         </div>
                         <h4>Tubal Cannulation</h4>
-                        <p>If you're seeking expert Tubal Cannulation treatment in Faridabad or wondering about Tubal Cannulation near me, our hospital is your trusted destination. Regain hope on your fertility journey with our state-of-the-art services.</p>
+                        <p>If you're seeking expert Tubal Cannulation treatment in Faridabad or wondering about Tubal
+                            Cannulation near me, our hospital is your trusted destination. Regain hope on your fertility
+                            journey with our state-of-the-art services.</p>
                     </div>
                 </div>
             </div>
@@ -386,8 +428,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed with <i class="bi bi-heart-fill"
-                        style="color: var(--primary-pink);"></i></p>
+                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed & Developed by <a style="text-decoration: none; color: #bbb;"  href="https://brandingwaale.com/"> Brandingwaale Webtech</a></p>
             </div>
         </div>
     </footer>
