--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet"
@@ -39,14 +41,16 @@
                     <img src="images/imgi_1_logo.png" alt="" class="">
                 </a>
             </div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-
 
                     <!-- Services Dropdown -->
                     <li class="nav-item dropdown">
@@ -77,10 +81,9 @@
                             <li><a class="dropdown-item" href="pregnancy-in-obesity.html">Pregnancy In Obesity</a></li>
                             <li><a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy
                                     Loss</a></li>
-                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal cannulation</a></li>
+                            <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal Cannulation</a></li>
                         </ul>
                     </li>
-
 
                     <!-- Gallery Dropdown -->
                     <li class="nav-item dropdown">
@@ -94,6 +97,7 @@
                         </ul>
                     </li>
 
+                    <!-- Events Dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle fw-medium" href="#" id="eventDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -105,12 +109,24 @@
                         </ul>
                     </li>
 
-
                     <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
+
+                <!-- Book Appointment Visible Only on Mobile/Tablet -->
+                <ul class="navbar-nav d-lg-none">
+                    <li class="nav-item">
+                        <a href="contact.html" class="btn btn-gradient w-100 mt-3">Book Appointment</a>
+                    </li>
+                </ul>
+
             </div>
-            <a href="" class="btn btn-gradient">Book Appointment</a>
+
+            <!-- Book Appointment Visible Only on Desktop -->
+            <div class="d-none d-lg-block">
+                <a href="contact.html" class="btn btn-gradient">Book Appointment</a>
+            </div>
+
         </div>
     </nav>
 
@@ -209,7 +225,7 @@
             <!-- Experience Section -->
             <div class="row mb-5">
                 <div class="col-12">
-                    <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">Experience & Expertise</h2>
+                    <h2 class="exp-title" data-aos="fade-up" data-aos-delay="100">Experience & Expertise</h2>
                     <div class="experience-card" data-aos="fade-up" data-aos-delay="200">
                         <h4 class="mb-3" style="color: #764ba2;">Professional Journey</h4>
                         <p class="highlight-text">Dr. Divya is a renowned gynaecologist, Obstetrician, and Infertility
@@ -251,7 +267,7 @@
     </section>
 
     <section>
-        <div class="container-main">
+        <div class="container">
             <!-- Title Section -->
             <div class="plans-title">
                 <h1 data-aos="fade-up">Plan <span style="color: var(--primary-purple);">Table</span></h1>
@@ -699,7 +715,8 @@
                     <ul class="footer-links">
                         <li><i class="bi bi-clock me-2"></i>Accord Superspeciality <br> Hospital 24x7 Available</li>
                         <li><i class="bi bi-clock me-2"></i>Home Clinic - House No. 1343, Sector - 21, Mon-Sat: 6PM-8PM
-                            <br>By Appointment</li>
+                            <br>By Appointment
+                        </li>
                     </ul>
                 </div>
 
@@ -714,8 +731,9 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed with <i class="bi bi-heart-fill"
-                        style="color: var(--primary-pink);"></i></p>
+                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed & Developed by <a
+                        style="text-decoration: none; color: #bbb;" href="https://brandingwaale.com/"> Brandingwaale Webtech</a>
+                </p>
             </div>
         </div>
     </footer>
