--- a/pregnancy-in-obesity.html
+++ b/pregnancy-in-obesity.html
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="row">
                 <!-- Sidebar Services -->
-                <div class="col-lg-3 mb-4" style="overflow: hidden;">
+                <div class="col-lg-3 mb-4  order-2 order-md-2 order-lg-1 " style="overflow: hidden;">
                     <h4 data-aos="fade-right">Our Services</h4>
                     <div class="about-card" data-aos="fade-right" data-aos-delay="100">
                         <h5><i class="fas fa-check-circle"></i> Blastocyst</h5>
@@ -189,7 +189,7 @@
                 </div>
 
                 <!-- Main Content -->
-                <div class="col-lg-9">
+                <div class="col-lg-9  order-1 order-md-1 order-lg-2 mb-5 mb-lg-0">
                     <div class="sticky-top" style="top: 100px;">
                         <div class="info-box" data-aos="fade-left">
                             <h3>Pregnancy In Obesity</h3>
@@ -370,11 +370,11 @@
     </section>
 
     <!-- Doctor Section -->
-    <section class="doctor-section" data-aos="fade-up" data-aos-delay="100">
+   <section class="doctor-section" data-aos="fade-up" data-aos-delay="100">
         <div class="container">
             <div class="doctor-content">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 order-2 order-md-2 order-lg-1">
                         <div class="doctor-info">
                             <h3>Meet Our Specialist</h3>
                             <h4 style="margin-bottom: 1rem; font-weight: 600;">Dr. Divya Kumar</h4>
@@ -384,9 +384,15 @@
                             <p style="margin-top: 1rem;">With a passion for helping couples achieve their dreams of
                                 parenthood, Dr. Divya combines cutting-edge medical technology with compassionate
                                 patient care.</p>
+                            <!-- <div class="social-links">
+                                <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                            </div> -->
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 order-1 order-md-1 order-lg-2 mb-4 mb-lg-0">
                         <div>
                             <img src="images/imgi_3_dr.divya-profile.webp" alt="" class="img-fluid">
                         </div>
@@ -445,8 +451,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed with <i class="bi bi-heart-fill"
-                        style="color: var(--primary-pink);"></i></p>
+                <p>&copy; 2025 Dr. Divya Kumar. All Rights Reserved. | Designed & Developed by <a style="text-decoration: none; color: #bbb;"  href="https://brandingwaale.com/"> Brandingwaale Webtech</a></p>
             </div>
         </div>
     </footer>
